Added an info page.

--- a/static/ruler.html
+++ b/static/ruler.html
@@ -359,6 +359,7 @@ Options:
 <a href="#" id=pleaseCalibrateLink
 onclick="this.style.fontSize='1em'; var a = this; (function(s) {if (s.display=='none') {s.display='block'; a.innerHTML = 'Click when you&amp;#x2019;re done calibrating.';} else {s.display='none'; dpiCalibrated = true; a.innerHTML = 'Calibrate.';}})(document.getElementById('calibration').style); setTotem(null); return false;"
 style="font-size: 3em;">Please calibrate your ruler.</a>
+<a href=rulerinfo.html>About.</a>
 <div id=calibration style="display:none">
 <script>
 if (dpiCalibrated) {
