Fixed zoom levels for Opera and Webkit Mobile (I think(.

--- a/static/ruler.html
+++ b/static/ruler.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Ruler Now!</title>
+<title>Free on-screen ruler on the Web.</title>
 <meta name=description content="Ruler with centimeters and inches. Configurable for different screens.">
 <style>
 html, body {margin:0}
@@ -147,6 +147,8 @@ kbd{
  *
  * See this post for explanation.
  * http://www.webkit.org/blog/57/css-units/
+ * As well as this one on the Mozilla side:
+ * http://weblogs.mozillazine.org/roc/archives/2010/01/css_absolute_le.html
  *
  * Note: it seems that IE has added a screen.deviceXDPI property but
  * it also has nothing to do with physical DPI (it just assumes 96dpi).
