--- a/static/ruler.html
+++ b/static/ruler.html
@@ -189,6 +189,46 @@ var clearRuler = function() {
 };
 /** @type {{w: number, h: (number|undefined)}} */
 var totemMarker = null;
+
+/**
+ * Draws the ticks and numbers. The tick lengths are given in an array.
+ *
+ * Caller is responsible for calling stroke(); beginPath() after this function.
+ *
+ * @param {!CanvasRenderingContext2D} c
+ * @param {!Array.<number>} array of heights of ticks (px)
+ * @param {number} tickDistance horizontal distance between each tick (px)
+ * @param {number} rulerLength horizontal length of ruler (px)
+ * @param {boolean} isAboveLine true if we should draw above the line.
+ */
+function drawRulerHelper(c, ticks, tickDistance, rulerLength, isAboveLine) {
+  var i = 0;
+  c.textBaseline = isAboveLine ? 'bottom' : 'top';
+  var numTicks = rulerLength / tickDistance;
+  var y0 = ticks[0];
+  if (! isAboveLine) y0 = -y0;
+
+  // Workaround for http://crbug.com/87097 : draw the leftmost vertical line
+  // twice, by itself, so that it doesn't get cut off in Chrome.
+  c.stroke();
+  c.beginPath();
+  c.moveTo(0,0);
+  c.lineTo(0,y0);
+  c.stroke();
+  c.beginPath();
+
+  for (var i = 0; i < numTicks; ++i) {
+    var x = i * tickDistance;
+    if (options.flipped) x = -x;
+    var y = ticks[i%ticks.length];
+    if (! isAboveLine) y = -y;
+    c.moveTo(x,0);
+    c.lineTo(x,y);
+    if (i % ticks.length == 0) {
+      c.fillText(i/ticks.length, x + 3, y);
+    }
+  }
+}
 var drawRuler = function() {
   var dpi = options.dpi;
   c.strokeStyle = 'black';
@@ -198,38 +238,22 @@ var drawRuler = function() {
   if (options.flipped) c.lineTo(-rulerLength, 0);
   else c.lineTo(rulerLength, 0);
   if (options.drawInches) {
-    var i = 0;
-    c.textBaseline = options.drawInches === 1 ? 'bottom' : 'top';
-    var numTicks = rulerLength / dpi * 16;
-    for (var i = 0; i < numTicks; ++i) {
-      // 1 tick = 1/16 in = dpi/16 px.
-      var x = i * dpi/16;
-      if (options.flipped) x = -x;
-      c.moveTo(x,0);
+    // 1 tick = 1/16 in = dpi/16 px.
+    var tickDistance = dpi/16
+      , isAboveLine = options.drawInches === 1
+      , ticks = [];
+    for (var i = 0; i < 16; i++) {
       var y = i % 16 == 0 ? 50 : i % 8 === 0 ? 30 : i % 4 === 0 ? 20 : i % 2 === 0 ? 15 : 10;
-      if (options.drawInches !== 1) y = -y;
-      c.lineTo(x,y);
-      if (i % 16 == 0) {
-        c.fillText(i/16, x + 3, y);
-      }
+      ticks.push(y);
     }
+    drawRulerHelper(c, ticks, tickDistance, rulerLength, isAboveLine);
   }
   if (options.drawMetric) {
-    var i = 0, x = 0;
-    c.textBaseline = options.drawMetric === 1 ? 'bottom' : 'top';
-    var numTicks = rulerLength / dpi * 25.4;
-    for (var i = 0; i < numTicks; ++i) {
-      // 1 tick = 1 mm = 1/25.4 in = dpi/25.4px
-      var x = i * dpi/25.4;
-      if (options.flipped) x = -x;
-      c.moveTo(x,0);
-      var y = i % 10 === 0 ? 30 : i % 5 === 0 ? 20 : 10;
-      if (options.drawMetric !== 1) y = -y;
-      c.lineTo(x,y);
-      if (i % 10 == 0) {
-        c.fillText(i/10, x + 3, y);
-      }
-    }
+    // 1 tick = 1 mm = 1/25.4 in = dpi/25.4px
+    var tickDistance = dpi/25.4
+      , isAboveLine = options.drawMetric === 1
+      , ticks = [30, 0, 0, 0, 0, 10, 0, 0, 0, 0];
+    drawRulerHelper(c, ticks, tickDistance, rulerLength, isAboveLine);
   }
   c.stroke();
   c.beginPath();
@@ -241,6 +265,15 @@ var drawRuler = function() {
     c.moveTo(edgeX, -60);
     c.lineTo(edgeX, 60);
     if (marker.h) {
+      // Workaround for http://crbug.com/87097 : draw the leftmost vertical line
+      // twice, by itself, so that it doesn't get cut off in Chrome.
+      c.stroke();
+      c.beginPath();
+      c.moveTo(0, 0);
+      c.lineTo(0, marker.h*dpi);
+      c.stroke();
+      c.beginPath();
+
       c.moveTo(0, 0);
       c.lineTo(edgeX, 0);
       c.lineTo(edgeX, marker.h*dpi);
