Added license information.

--- a/static/ruler.html
+++ b/static/ruler.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Copyright (c) 2011, Yonathan Randolph. This is released under BSD. -->
 <title>Free on-screen ruler on the Web.</title>
 <!--Try to get it to work for IE6-8 users.-->
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
