Fixed syntax error in script! Anyone who cached it has a bad version for 1 week!

--- a/static/ruler.html
+++ b/static/ruler.html
@@ -178,7 +178,7 @@ if (!canvas.getContext) {
   canvas.style.display = 'none';
   document.write(
     '<h1>Sorry, you\u2019re using an obsolete browser. ' +
-    'Come back with Chrome, Firefox, Opera,
+    'Come back with Chrome, Firefox, Opera,' +
     '<a href="http://www.google.com/chromeframe">Chrome Frame</a>, etc.</h1>');
 }
 var c = canvas.getContext('2d');
