Added touches.html: a simple page that shows where tap the touchscreen.

--- a/static/rulerinfo.html
+++ b/static/rulerinfo.html
@@ -1,4 +1,6 @@
 <h1>More information</h1>
+
+<h2><a href="ruler.html">On-screen Ruler</a></h2>
 <p>I made this ruler because I was at a caf&#233; a couple days ago
 (2011-02-19) and needed a ruler to measure some wire, but I couldn&#x2019;t
 find a good one online.
@@ -11,6 +13,16 @@ view the ruler and you&#x2019;re using IE, I don&#x2019;t want to hear about it
 
 <p>The source is already there (View Source), but I&#x2019;ll put revision
 history at <a href="https://github.com/yonran/htmldoodads">github</a>.
+
+<h2><a href="touches.html">Touchscreen test</a></h2>
+<p>Today (2011-07-03) my friend James said his Android phone was acting
+janky, so here&#x2019;s a test of the touchscreen. It&#x2019;s probably
+the first thing anyone does when he wants to experiment with mousemove
+and touchmove, but somehow I couldn&#x2019;t find a simple one online.
+
+<p>TODO: I should probably add a display of the path so that you can do your
+own &#x201c;DIY touchscreen analysis&#x201d; (MOTO Labs&#x2019; website is
+gone so I can&#x2019;t link directly to them).
 
 <p>For feedback, you can email me at yonathan@gmail.com, or send me a tweet
 @yonran.
